tests/fixtures/invalid/round_set_bool.py
# Cannot call round() with Set[int], Bool
x = round({1, 2, 3}, True)
